Changelog
------------

1.4.2 (unreleased)
~~~~~~~~~~~~~~~~~~

- Updated basque translation and added Spanish translation.
  [erral]

1.4.1 (2012-07-02)
~~~~~~~~~~~~~~~~~~

- Fix Unicode error when a question contains non-ascii char.
  [sylvainb, Helmut Toplitzer]

1.4 (2012-06-22)
~~~~~~~~~~~~~~~~

- Use plone.app.registry instead of a property sheet for the questions configuration.
  Questions can now be added using a dedicated control panel.
  [sylvainb]

- Add an upgrade step (1 -> 2) to copy questions from the old properties sheet to plone.app.registry.
  [sylvainb]

- Fix the widget template for use with plone.app.discussion (there was no redirection to 
  the comment form when only the captcha is wrong).
  [sylvainb]
  
- Update translations (some new strings added).
  [sylvainb]

- Add Basque translation
  [erral]


1.3.1 (2012-03-28)
~~~~~~~~~~~~~~~~~~~~~~~~

- Add simplified chinese translation
  [Aijun Jian]

1.3 (2012-02-27)
~~~~~~~~~~~~~~~~~~~~~~~~

- Allow multiple answers for a question
  [naro]

- Added danish translation
  [tmog]


1.2.1 (2010-11-05)
~~~~~~~~~~~~~~~~~~~~~~~~

- Added german translation
  [petschki]


1.2 (2010-10-31)
~~~~~~~~~~~~~~~~~~~~~~~~

- Fix tests for Plone 4
  [sylvainb]

- Added Czech translation
  [naro]

1.1 (2010-09-15)
~~~~~~~~~~~~~~~~~~~~~~~~

- Support for using as a plone.app.discussion captcha plugin (Plone 4)
  [Petri Savolainen]

- Finnish translations
  [Petri Savolainen]

1.0 (2010-01-13)
~~~~~~~~~~~~~~~~~~~~~~~~

- Initial release
  [sylvainb]
