@@ -1,6 +1,6 @@
 from zope.i18nmessageid import MessageFactory
-MessageFactory = MessageFactory('collective.z3cform.norobots')
-_ = MessageFactory
+norobotsMessageFactory = MessageFactory('collective.z3cform.norobots')
+_ = norobotsMessageFactory
 
 def dummy_strings():
     """ Dummy i18n strings for default questions """
